tests/snapshots/register_operations_test__multiple_named_registers.snap
---
source: tests/register_operations_test.rs
expression: test.snapshot_state()
---
Mode: Insert
Cursor: 0:26
Lines: 1

Buffer:
oyiww"byiww"cyiw$"ap"bp"cp[n]e two three four
