tests/snapshots/register_operations_test__overwrite_named_register.snap
---
source: tests/register_operations_test.rs
expression: test.snapshot_state()
---
Mode: Insert
Cursor: 0:14
Lines: 1

Buffer:
fyiww"ayiw$"ap[i]rst second third
