tests/snapshots/register_operations_test__percent_register_filename.snap
---
source: tests/register_operations_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 0:0
Lines: 1

Buffer:
[t]est content
