tests/snapshots/register_operations_test__register_0_only_yanks.snap
---
source: tests/register_operations_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 0:2
Lines: 1

Buffer:
le[l]o world
