tests/snapshots/register_operations_test__register_chain_operations.snap
---
source: tests/register_operations_test.rs
expression: test.snapshot_state()
---
Mode: Insert
Cursor: 0:24
Lines: 1

Buffer:
oyiww"byiw"ap"bp"ayiw"ap[n]e two three four
