tests/snapshots/register_operations_test__register_linewise_vs_charwise.snap
---
source: tests/register_operations_test.rs
expression: test.snapshot_state()
---
Mode: Insert
Cursor: 0:16
Lines: 3

Buffer:
lyyw"byiwG"ap"bp[i]ne 1
line 2
line 3
