tests/snapshots/register_operations_test__register_paste_with_count.snap
---
source: tests/register_operations_test.rs
expression: test.snapshot_state()
---
Mode: Insert
Cursor: 0:9
Lines: 1

Buffer:
wyiw$3"ap[o]rd
