tests/snapshots/register_operations_test__register_survives_undo.snap
---
source: tests/register_operations_test.rs
expression: test.snapshot_state()
---
Mode: Insert
Cursor: 0:10
Lines: 1

Buffer:
hyiwdwu"ap[e]llo world
