tests/snapshots/register_operations_test__register_with_count_delete.snap
---
source: tests/register_operations_test.rs
expression: test.snapshot_state()
---
Mode: Insert
Cursor: 0:8
Lines: 4

Buffer:
l2ddG"ap[i]ne 1
line 2
line 3
line 4
