tests/snapshots/register_operations_test__register_with_count_yank.snap
---
source: tests/register_operations_test.rs
expression: test.snapshot_state()
---
Mode: Insert
Cursor: 0:9
Lines: 1

Buffer:
o3yiw$"ap[n]e two three four
