tests/snapshots/register_operations_test__register_with_newlines.snap
---
source: tests/register_operations_test.rs
expression: test.snapshot_state()
---
Mode: Insert
Cursor: 0:7
Lines: 3

Buffer:
lyyG"ap[i]ne 1
line 2
line 3
